// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id           String   @id @default(uuid())
  username     String   @unique
  email        String   @unique
  name         String
  passwordHash String
  role         String // "student" or "instructor"
  avatar       String?
  bio          String?
  location     String?
  githubUrl    String?
  linkedinUrl  String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  // Relations
  submissions        Submission[]
  problems           Problem[] // Problems created by instructor
  achievements       UserAchievement[]
  bktStates          BKTState[] // BKT (Bayesian Knowledge Tracing) states
  instructorClasses  Class[]           @relation("InstructorClasses")
  enrollments        ClassEnrollment[] @relation("StudentEnrollments")

  @@map("users")
}

model Problem {
  id                  String   @id @default(uuid())
  title               String
  difficulty          String // "easy", "medium", "hard"
  description         String
  inputFormat         String
  outputFormat        String
  constraints         String[]
  topics              String[]
  knowledgeComponents String[]
  timeLimit           Int      @default(5) // seconds
  memoryLimit         Int      @default(256) // MB
  acceptanceRate      Float    @default(0)
  totalSubmissions    Int      @default(0)
  source              String?
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  // Relations
  createdBy       String?
  creator         User?            @relation(fields: [createdBy], references: [id])
  testCases       TestCase[]
  submissions     Submission[]
  problemSetItems ProblemSetItem[]

  @@map("problems")
}

model TestCase {
  id          String  @id @default(uuid())
  problemId   String
  input       String
  output      String
  explanation String?
  isHidden    Boolean @default(false)
  points      Int     @default(10)

  // Relations
  problem Problem @relation(fields: [problemId], references: [id], onDelete: Cascade)

  @@map("test_cases")
}

model Submission {
  id              String   @id @default(uuid())
  userId          String
  problemId       String
  code            String
  language        String // "python", "java", "cpp", "javascript"
  status          String // "accepted", "wrong_answer", "runtime_error", "time_limit_exceeded", "compilation_error"
  testCasesPassed Int      @default(0)
  totalTestCases  Int
  runtime         Float? // in seconds
  memory          Int? // in KB
  // Raw output from judge (compile/runtime) to display in UI
  compileOutput   String? @db.Text
  stderr          String? @db.Text
  judgeStatusId   Int?
  submittedAt     DateTime @default(now())

  // Relations
  user    User    @relation(fields: [userId], references: [id])
  problem Problem @relation(fields: [problemId], references: [id])
  error   SubmissionError?

  @@map("submissions")
}

model SubmissionError {
  id            String    @id @default(uuid())
  submissionId  String    @unique
  language      String
  compileOutput String?   @db.Text
  stderr        String?   @db.Text
  signatureId   String?
  createdAt     DateTime  @default(now())

  submission Submission      @relation(fields: [submissionId], references: [id], onDelete: Cascade)
  signature  ErrorSignature? @relation(fields: [signatureId], references: [id])

  @@map("submission_errors")
}

model ErrorSignature {
  id         String   @id @default(uuid())
  hash       String   @unique // SHA-256 of normalized error text
  
  // Academic Framework Fields (IEEE 1044 + Zehetmeier)
  surfaceError     String? // e.g., "Functional/Logic", "Syntax", "Semantic/Type"
  specificError    String? // Detailed description
  compilerExcerpt  String?  @db.Text // Specific code/error excerpt
  cognitiveCause   String? // e.g., "STRUCTURAL_BLINDNESS", "MISCONCEPTION"
  bloomLevel       String? // e.g., "Apply", "Understand", "Remember"
  reasoning        String?  @db.Text // Full LLM explanation
  source           String? // e.g., "llm", "llm-logic-error", "rules"
  
  // Legacy/Metadata (keep for backward compatibility)
  label      String? // Combined format: "Surface: Specific"
  confidence Float?
  sample     String?  @db.Text // First example error text
  embedding  Json? // Store vector as JSON array (768-dim)
  clusterId  String?
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  cluster      ErrorCluster?     @relation(fields: [clusterId], references: [id])
  occurrences  SubmissionError[]

  @@index([hash])
  @@index([surfaceError])
  @@index([cognitiveCause])
  @@index([bloomLevel])
  @@map("error_signatures")
}

model ErrorCluster {
  id         String   @id @default(uuid())
  name       String? // Optional human-readable label
  centroid   Json? // Average embedding vector
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  signatures ErrorSignature[]

  @@map("error_clusters")
}

model Achievement {
  id          String @id @default(uuid())
  name        String @unique
  description String
  icon        String
  rarity      String // "common", "rare", "epic", "legendary"

  // Relations
  users UserAchievement[]

  @@map("achievements")
}

model UserAchievement {
  id            String    @id @default(uuid())
  userId        String
  achievementId String
  progress      Int? // for progressive achievements
  total         Int? // total required for completion
  unlocked      Boolean   @default(false)
  unlockedAt    DateTime?

  // Relations
  user        User        @relation(fields: [userId], references: [id])
  achievement Achievement @relation(fields: [achievementId], references: [id])

  @@unique([userId, achievementId])
  @@map("user_achievements")
}

model KnowledgeComponent {
  id          String     @id @default(uuid())
  name        String     @unique
  description String
  createdAt   DateTime   @default(now())
  bktStates   BKTState[]
}

model BKTState {
  id          String             @id @default(uuid())
  userId      String
  kcId        String
  pKnown      Float              @default(0.2)
  attempts    Int                @default(0)
  corrects    Int                @default(0)
  lastUpdated DateTime           @default(now())
  user        User               @relation(fields: [userId], references: [id])
  kc          KnowledgeComponent @relation(fields: [kcId], references: [id])

  @@unique([userId, kcId])
}

model Class {
  id          String   @id @default(uuid())
  name        String
  description String?
  semester    String? // "Fall 2025", "Spring 2026"
  code        String?  @unique // Class code for easy enrollment: "CS101-F25"
  
  instructorId String
  instructor   User    @relation("InstructorClasses", fields: [instructorId], references: [id], onDelete: Cascade)
  
  enrollments  ClassEnrollment[]
  problemSets  ProblemSet[]
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  
  @@map("classes")
}

model ClassEnrollment {
  id        String   @id @default(uuid())
  classId   String
  studentId String
  
  class     Class    @relation(fields: [classId], references: [id], onDelete: Cascade)
  student   User     @relation("StudentEnrollments", fields: [studentId], references: [id], onDelete: Cascade)
  
  enrolledAt DateTime @default(now())
  
  @@unique([classId, studentId])
  @@map("class_enrollments")
}

model ProblemSet {
  id          String   @id @default(uuid())
  title       String
  description String?
  
  classId     String?
  class       Class?   @relation(fields: [classId], references: [id], onDelete: SetNull)
  
  problems    ProblemSetItem[]
  
  dueDate     DateTime?
  createdAt   DateTime @default(now())
  
  @@map("problem_sets")
}

model ProblemSetItem {
  id            String      @id @default(uuid())
  problemSetId  String
  problemId     String
  order         Int
  
  problemSet    ProblemSet  @relation(fields: [problemSetId], references: [id], onDelete: Cascade)
  problem       Problem     @relation(fields: [problemId], references: [id], onDelete: Cascade)
  
  @@unique([problemSetId, problemId])
  @@map("problem_set_items")
}
